Final result of `Responsive cards` (npm + gulp, scss)

--- a/December/responsive-cards/src/index.html
+++ b/December/responsive-cards/src/index.html
@@ -2,6 +2,6 @@
 <html lang="uk" class="page">
   @include('partials/head.html')
   <body class="page__body">
-    @include('example.html')
+    @include('cards.html')
   </body>
 </html>
