`Kursova 2022` menu & pages

--- a/kursova/src/menu.html
+++ b/kursova/src/menu.html
@@ -1,1 +1,18 @@
-Menu<br>
+<nav class="nav-bar">
+    <div onclick="location.href='/'" class="nav-item logo">
+        travelaja
+    </div>
+    <div class="nav-item">
+        <a id="home_button" href="/">Home</a>
+        <a id="discover_button" href="/discover.html">Discover</a>
+        <a id="services_button" href="/services.html">Services</a>
+        <a id="news_button" href="/news.html">News</a>
+        <a id="about_us_button" href="/about-us.html">About Us</a>
+        <a id="contacts_button" href="/contacts.html">Contact</a>
+    </div>
+     <div class="nav-item button-location">
+        <img
+        src="https://cdn-icons-png.flaticon.com/512/321/321267.png"
+        alt="UA Flag" height="30">&nbsp;&nbsp;&#8964;
+    </div>
+</nav>
