Finished footer & start with main page content `Kursova 2022`

--- a/kursova/src/about-us.html
+++ b/kursova/src/about-us.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 @include('partials/head.html')
 <body class="page__body">
-    <div class="news-header">
+    <div class="about-us-header">
         @include('menu.html')
     </div>
     @include('partials/footer.html')
