--- a/kursova/src/main.html
+++ b/kursova/src/main.html
@@ -1,3 +1,10 @@
 <div class="main-header">
     @include('menu.html')
+    <div class="main-header-content">
+        <div>Explore the world with a smile</div>
+        <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna
+        fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo.</div>
+        <div class="search-bar">
+        </div>
+    </div>
 </div>
