Finished main page & started second for `Kursova 2022`

--- a/kursova/src/discover.html
+++ b/kursova/src/discover.html
@@ -5,6 +5,15 @@
     <div class="discover-header">
         @include('menu.html')
     </div>
+    <div class="discover-header-block">
+        <span style="position: absolute; bottom: 20px; left: 20px;">Discover</span>
+    </div>
+    <div class="map-block">
+        <div class="map-text">
+            D Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius eaque culpa reiciendis est, eos reprehenderit exercitationem ab sit iste, perspiciatis quaerat temporibus numquam recusandae voluptate non ipsam quasi asperiores debitis quidem laudantium. Autem debitis quae magnam quis numquam, ab commodi ut recusandae dolor totam. Sed ea voluptatem repudiandae porro possimus, distinctio dolorum explicabo labore! Dignissimos quas perspiciatis facilis provident et sunt voluptas minus exercitationem nulla ad a cupiditate totam possimus quis fuga nobis placeat, asperiores officiis.
+        </div>
+        <div style="background-image: url(./img/map.png); width: 100%; height: 200px; border-radius: 10px;"></div>
+    </div>
     @include('partials/footer.html')
 </body>
 
