--- a/kursova/src/main.html
+++ b/kursova/src/main.html
@@ -5,6 +5,274 @@
         <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna
         fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo.</div>
         <div class="search-bar">
+            <svg class="search-item" width="14" style="float: left;" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M7.00001 0.125C5.35957 0.126935 3.78688 0.779452 2.62692 1.93941C1.46696 3.09938 0.814442 4.67207 0.812507 6.3125C0.810542 7.65306 1.24843 8.95725 2.05901 10.025C2.05901 10.025 2.22776 10.2472 2.25532 10.2793L7.00001 15.875L11.7469 10.2764C11.7717 10.2466 11.941 10.025 11.941 10.025L11.9416 10.0233C12.7517 8.95603 13.1894 7.65245 13.1875 6.3125C13.1856 4.67207 12.5331 3.09938 11.3731 1.93941C10.2131 0.779452 8.64044 0.126935 7.00001 0.125ZM7.00001 8.5625C6.555 8.5625 6.11998 8.43054 5.74997 8.18331C5.37996 7.93607 5.09157 7.58467 4.92128 7.17354C4.75098 6.7624 4.70642 6.31 4.79324 5.87355C4.88006 5.43709 5.09435 5.03618 5.40902 4.72151C5.72368 4.40684 6.1246 4.19255 6.56105 4.10573C6.99751 4.01892 7.44991 4.06347 7.86104 4.23377C8.27218 4.40407 8.62358 4.69246 8.87081 5.06247C9.11805 5.43248 9.25001 5.86749 9.25001 6.3125C9.24926 6.90901 9.01197 7.48087 8.59017 7.90267C8.16838 8.32446 7.59652 8.56176 7.00001 8.5625Z"
+                    fill="black" />
+            </svg>
+            <span class="search-item" style="float: left; color: #000; margin-left: 5px;">City of destination</span>
+            <span class="search-item" style="color: #000;">|</span>
+            <span class="search-item" style="color: #000; margin-left: 5px;">Date of stay</span>
+            <span class="search-item" style="color: #000;">|</span>
+            <span class="search-item" style="color: #000; margin-left: 5px;">Person</span>
+            <span style="background: #43B97F; border-radius: 10px; float: right; height: 49px; width: 168px; position: relative; bottom: 20px; display: inline-flex; align-items: center; text-align: center;">&nbsp;&nbsp;&nbsp;Find trip now&nbsp;&nbsp;&nbsp;
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M10.2635 20.526C12.5407 20.5255 14.7523 19.7632 16.5461 18.3605L22.1859 24L24 22.186L18.3602 16.5465C19.7637 14.7526 20.5265 12.5407 20.5271 10.263C20.5271 4.60423 15.9226 0 10.2635 0C4.60448 0 0 4.60423 0 10.263C0 15.9217 4.60448 20.526 10.2635 20.526ZM10.2635 2.56575C14.5088 2.56575 17.9612 6.01796 17.9612 10.263C17.9612 14.508 14.5088 17.9602 10.2635 17.9602C6.01828 17.9602 2.56588 14.508 2.56588 10.263C2.56588 6.01796 6.01828 2.56575 10.2635 2.56575Z"
+                    fill="white" />
+            </svg>
+          </span>
+        </div>
+    </div>
+</div>
+<div class="main-page-content">
+<div class="image-main-content" style="height: 448px; min-width: 274px; background-image: url(./img/tibet.png);">
+</div>
+<div class="image-main-content" style="background-image: url(./img/venice.png); 
+    height: 332px;
+    min-width: 200px;
+    position: relative;
+    top: 125px;
+    right: 10px;">
+</div>
+<div class="image-main-content" style="background-image: url(./img/bridge.png); 
+    height: 310px;
+    min-width: 180px;
+    position: relative;
+    top: 15px;
+    right: 80px;">
+</div>
+<div style="padding: 15px;">
+    <div style="color: #295943;
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 180%;">Travelers Point
+    </div>
+    <div style="font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 27.65px;
+        line-height: 120%;
+        color: #3D3E48;">
+        We help to find your dream place
+    </div>
+    <div style="padding:5px; font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 180%;
+        color: #3D3E48;">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna
+        fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo, vel fringilla est ullamcorper
+        eget nulla facilisi
+    </div>
+    <div style="display: grid; grid-template-columns: 150px 150px;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        color: #3D3E48;">
+        <div style="padding: 5px;">
+            <div style="font-weight: 700; font-size: 27.65px; color:#295943;">100+</div>
+            <div>Holiday Package</div>
+        </div>
+        <div style="padding: 5px;">
+            <div style="font-weight: 700; font-size: 27.65px; color:#295943;">172</div>
+            <div>Hotels</div>
+        </div>
+        <div style="padding: 5px;">
+            <div style="font-weight: 700; font-size: 27.65px; color:#295943;">68</div>
+            <div>Elite Transportation</div>
+        </div>
+        <div style="padding: 5px;">
+            <div style="font-weight: 700; font-size: 27.65px; color:#295943;">32M+</div>
+            <div>we help to find your dream place</div>
+        </div>
+    </div>
+</div>
+</div>
+
+<div style="text-align: center; font-weight: 700; padding: 10px;">
+    <div style="font-size: 16px; line-height: 180%; text-transform: capitalize; color: #295943;">top destination</div>
+    <div style="font-size: 27.65px; line-height: 120%; color: #3D3E48;">Discover your love</div>
+</div>
+
+<div class="card-main-block">
+    <div class="cards-block card-block-bordered">
+        <div class="inner-block cards-block-inner">
+            <div class="card-1">
+            </div>
+            <div style="color: #3D3E48; font-weight: 700; font-size: 19.2px; line-height: 180%; padding: 10px;">Taman Nasional Komodo</div>
+            <div style="display: grid; grid-template-columns: 50% 50%;">
+                <div style="padding: 10px; text-align: left; color: #295943; font-size: 16px; font-weight: 700; line-height: 180%;">
+                    Rp. 7,5jt
+                </div>
+                <div style="padding: 10px; text-align: right; color: #3D3E48; font-size: 14px; font-weight: 400; line-height: 180%;"><svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M6.72338e-07 7.73725C-0.0024799 7.88928 0.041308 8.03848 0.125558 8.16505C0.209809 8.29163 0.330542 8.38961 0.471751 8.446L7.6725 11.3267L10.5532 18.5282C10.6089 18.6675 10.705 18.7869 10.8292 18.871C10.9534 18.9551 11.1 19.0001 11.25 19H11.262C11.4139 18.9976 11.5615 18.9491 11.6852 18.861C11.809 18.7729 11.9031 18.6493 11.955 18.5065L17.955 2.0065C18.0041 1.87227 18.0139 1.7268 17.9831 1.58722C17.9523 1.44764 17.8822 1.31977 17.7812 1.21866C17.6802 1.11755 17.5524 1.04741 17.4128 1.01651C17.2732 0.985615 17.1278 0.995237 16.9935 1.04425L0.493501 7.04425C0.350675 7.09632 0.227023 7.19053 0.138903 7.31441C0.0507826 7.43828 0.00234606 7.58599 6.72338e-07 7.738V7.73725Z" fill="#3D3E48"/>
+</svg> 7 days for trips
+</div>
+            </div>
+        </div>
+    </div>
+    <div class="cards-block card-block-bordered">
+        <div class="inner-block cards-block-inner">
+            <div class="card-2">
+            </div>
+            <div style="color: #3D3E48; font-weight: 700; font-size: 19.2px; line-height: 180%; padding: 10px;">Taman Nasional Bunaken</div>
+            <div style="display: grid; grid-template-columns: 50% 50%;">
+                <div style="padding: 10px; text-align: left; color: #295943; font-size: 16px; font-weight: 700; line-height: 180%;">
+                    Rp. 10,5jt
+                </div>
+                <div style="padding: 10px; text-align: right; color: #3D3E48; font-size: 14px; font-weight: 400; line-height: 180%;"><svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M6.72338e-07 7.73725C-0.0024799 7.88928 0.041308 8.03848 0.125558 8.16505C0.209809 8.29163 0.330542 8.38961 0.471751 8.446L7.6725 11.3267L10.5532 18.5282C10.6089 18.6675 10.705 18.7869 10.8292 18.871C10.9534 18.9551 11.1 19.0001 11.25 19H11.262C11.4139 18.9976 11.5615 18.9491 11.6852 18.861C11.809 18.7729 11.9031 18.6493 11.955 18.5065L17.955 2.0065C18.0041 1.87227 18.0139 1.7268 17.9831 1.58722C17.9523 1.44764 17.8822 1.31977 17.7812 1.21866C17.6802 1.11755 17.5524 1.04741 17.4128 1.01651C17.2732 0.985615 17.1278 0.995237 16.9935 1.04425L0.493501 7.04425C0.350675 7.09632 0.227023 7.19053 0.138903 7.31441C0.0507826 7.43828 0.00234606 7.58599 6.72338e-07 7.738V7.73725Z" fill="#3D3E48"/>
+</svg> 9 days for trips
+</div>
+            </div>
+        </div>
+    </div>
+    <div class="cards-block card-block-bordered">
+        <div class="inner-block cards-block-inner">
+            <div class="card-3">
+            </div>
+            <div style="color: #3D3E48; font-weight: 700; font-size: 19.2px; line-height: 180%; padding: 10px;">Raja Ampat, Papua Barat</div>
+            <div style="display: grid; grid-template-columns: 50% 50%;">
+                <div style="padding: 10px; text-align: left; color: #295943; font-size: 16px; font-weight: 700; line-height: 180%;">
+                    Rp. 20,5jt
+                </div>
+                <div style="padding: 10px; text-align: right; color: #3D3E48; font-size: 14px; font-weight: 400; line-height: 180%;"><svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M6.72338e-07 7.73725C-0.0024799 7.88928 0.041308 8.03848 0.125558 8.16505C0.209809 8.29163 0.330542 8.38961 0.471751 8.446L7.6725 11.3267L10.5532 18.5282C10.6089 18.6675 10.705 18.7869 10.8292 18.871C10.9534 18.9551 11.1 19.0001 11.25 19H11.262C11.4139 18.9976 11.5615 18.9491 11.6852 18.861C11.809 18.7729 11.9031 18.6493 11.955 18.5065L17.955 2.0065C18.0041 1.87227 18.0139 1.7268 17.9831 1.58722C17.9523 1.44764 17.8822 1.31977 17.7812 1.21866C17.6802 1.11755 17.5524 1.04741 17.4128 1.01651C17.2732 0.985615 17.1278 0.995237 16.9935 1.04425L0.493501 7.04425C0.350675 7.09632 0.227023 7.19053 0.138903 7.31441C0.0507826 7.43828 0.00234606 7.58599 6.72338e-07 7.738V7.73725Z" fill="#3D3E48"/>
+</svg> 14 days for trips
+</div>
+            </div>
+        </div>
+    </div>
+    <div class="cards-block card-block-bordered">
+        <div class="inner-block cards-block-inner">
+            <div class="card-4">
+            </div>
+            <div style="color: #3D3E48; font-weight: 700; font-size: 19.2px; line-height: 180%; padding: 10px;">Kepulauan Wakatobi</div>
+            <div style="display: grid; grid-template-columns: 50% 50%;">
+                <div style="padding: 10px; text-align: left; color: #295943; font-size: 16px; font-weight: 700; line-height: 180%;">
+                    Rp. 9,5jt
+                </div>
+                <div style="padding: 10px; text-align: right; color: #3D3E48; font-size: 14px; font-weight: 400; line-height: 180%;"><svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M6.72338e-07 7.73725C-0.0024799 7.88928 0.041308 8.03848 0.125558 8.16505C0.209809 8.29163 0.330542 8.38961 0.471751 8.446L7.6725 11.3267L10.5532 18.5282C10.6089 18.6675 10.705 18.7869 10.8292 18.871C10.9534 18.9551 11.1 19.0001 11.25 19H11.262C11.4139 18.9976 11.5615 18.9491 11.6852 18.861C11.809 18.7729 11.9031 18.6493 11.955 18.5065L17.955 2.0065C18.0041 1.87227 18.0139 1.7268 17.9831 1.58722C17.9523 1.44764 17.8822 1.31977 17.7812 1.21866C17.6802 1.11755 17.5524 1.04741 17.4128 1.01651C17.2732 0.985615 17.1278 0.995237 16.9935 1.04425L0.493501 7.04425C0.350675 7.09632 0.227023 7.19053 0.138903 7.31441C0.0507826 7.43828 0.00234606 7.58599 6.72338e-07 7.738V7.73725Z" fill="#3D3E48"/>
+</svg> 12 days for trips
+</div>
+            </div>
+        </div>
+    </div>
+    <div class="cards-block card-block-bordered">
+        <div class="inner-block cards-block-inner">
+            <div class="card-5">
+            </div>
+            <div style="color: #3D3E48; font-weight: 700; font-size: 19.2px; line-height: 180%; padding: 10px;">Gili Trawangan, Lombok</div>
+            <div style="display: grid; grid-template-columns: 50% 50%;">
+                <div style="padding: 10px; text-align: left; color: #295943; font-size: 16px; font-weight: 700; line-height: 180%;">
+                    Rp. 6,5jt
+                </div>
+                <div style="padding: 10px; text-align: right; color: #3D3E48; font-size: 14px; font-weight: 400; line-height: 180%;"><svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M6.72338e-07 7.73725C-0.0024799 7.88928 0.041308 8.03848 0.125558 8.16505C0.209809 8.29163 0.330542 8.38961 0.471751 8.446L7.6725 11.3267L10.5532 18.5282C10.6089 18.6675 10.705 18.7869 10.8292 18.871C10.9534 18.9551 11.1 19.0001 11.25 19H11.262C11.4139 18.9976 11.5615 18.9491 11.6852 18.861C11.809 18.7729 11.9031 18.6493 11.955 18.5065L17.955 2.0065C18.0041 1.87227 18.0139 1.7268 17.9831 1.58722C17.9523 1.44764 17.8822 1.31977 17.7812 1.21866C17.6802 1.11755 17.5524 1.04741 17.4128 1.01651C17.2732 0.985615 17.1278 0.995237 16.9935 1.04425L0.493501 7.04425C0.350675 7.09632 0.227023 7.19053 0.138903 7.31441C0.0507826 7.43828 0.00234606 7.58599 6.72338e-07 7.738V7.73725Z" fill="#3D3E48"/>
+</svg> 7 days for trips
+</div>
+            </div>
+        </div>
+    </div>
+    <div class="cards-block card-block-bordered">
+        <div class="inner-block cards-block-inner">
+            <div class="card-6">
+            </div>
+            <div style="color: #3D3E48; font-weight: 700; font-size: 19.2px; line-height: 180%; padding: 10px;">Taman Nasional Bromo</div>
+            <div style="display: grid; grid-template-columns: 50% 50%;">
+                <div style="padding: 10px; text-align: left; color: #295943; font-size: 16px; font-weight: 700; line-height: 180%;">
+                    Rp. 9,5jt
+                </div>
+                <div style="padding: 10px; text-align: right; color: #3D3E48; font-size: 14px; font-weight: 400; line-height: 180%;"><svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M6.72338e-07 7.73725C-0.0024799 7.88928 0.041308 8.03848 0.125558 8.16505C0.209809 8.29163 0.330542 8.38961 0.471751 8.446L7.6725 11.3267L10.5532 18.5282C10.6089 18.6675 10.705 18.7869 10.8292 18.871C10.9534 18.9551 11.1 19.0001 11.25 19H11.262C11.4139 18.9976 11.5615 18.9491 11.6852 18.861C11.809 18.7729 11.9031 18.6493 11.955 18.5065L17.955 2.0065C18.0041 1.87227 18.0139 1.7268 17.9831 1.58722C17.9523 1.44764 17.8822 1.31977 17.7812 1.21866C17.6802 1.11755 17.5524 1.04741 17.4128 1.01651C17.2732 0.985615 17.1278 0.995237 16.9935 1.04425L0.493501 7.04425C0.350675 7.09632 0.227023 7.19053 0.138903 7.31441C0.0507826 7.43828 0.00234606 7.58599 6.72338e-07 7.738V7.73725Z" fill="#3D3E48"/>
+</svg> 7 days for trips
+</div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div style="text-align: center; font-weight: 700; padding: 10px;">
+    <div style="font-size: 16px; line-height: 180%; text-transform: capitalize; color: #295943;">testimonial</div>
+    <div style="font-size: 27.65px; line-height: 120%; color: #3D3E48;">What they say about us</div>
+</div>
+
+<div class="card-main-block">
+    <div class="cards-block card-block-low">
+        <div class="inner-block cards-block-inner-low">
+            <div class="photo-name">
+                <div style="background: url(./img/face1.png) no-repeat center;"></div>
+                <div>Angelina Simple</div>
+            </div>
+            <div style="height: 100%; padding: 7px;">
+                <br><br>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis
+            </div>
+        </div>
+    </div>
+    <div class="cards-block card-block-low">
+        <div class="inner-block cards-block-inner-low" style="background-color: #43B97F; color: #fff !important;">
+            <div class="photo-name">
+                <div style="background: url(./img/face2.png) no-repeat center;"></div>
+                <div style="color: #fff !important;">Viola Natalie</div>
+            </div>
+            <div style="height: 100%; padding: 7px;">
+                <br><br>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis
+            </div>
+        </div>
+    </div>
+    <div class="cards-block card-block-low">
+        <div class="inner-block cards-block-inner-low">
+            <div class="photo-name">
+                <div style="background: url(./img/face3.png) no-repeat center;"></div>
+                <div>Robert John K.</div>
+            </div>
+            <div style="height: 100%; padding: 7px;">
+                <br><br>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis
+            </div>
+        </div>
+    </div>
+    <div class="cards-block card-block-low">
+        <div class="inner-block cards-block-inner-low">
+            <div class="photo-name">
+                <div style="background: url(./img/face4.png) no-repeat center;"></div>
+                <div>Anggi Nani</div>
+            </div>
+            <div style="height: 100%; padding: 7px;">
+                <br><br>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis
+            </div>
+        </div>
+    </div>
+    <div class="cards-block card-block-low">
+        <div class="inner-block cards-block-inner-low">
+            <div class="photo-name">
+                <div style="background: url(./img/face5.png) no-repeat center;"></div>
+                <div>Graham Suryo J</div>
+            </div>
+            <div style="height: 100%; padding: 7px;">
+                <br><br>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis
+            </div>
+        </div>
+    </div>
+    <div class="cards-block card-block-low">
+        <div class="inner-block cards-block-inner-low">
+            <div class="photo-name">
+                <div style="background: url(./img/face6.png) no-repeat center;"></div>
+                <div>Bagas G Natfi</div>
+            </div>
+            <div style="height: 100%; padding: 7px;">
+                <br><br>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis
+            </div>
         </div>
     </div>
 </div>
