--- a/kursova/src/discover.html
+++ b/kursova/src/discover.html
@@ -14,6 +14,76 @@
         </div>
         <div style="background-image: url(./img/map.png); width: 100%; height: 200px; border-radius: 10px;"></div>
     </div>
+    <div class="nature-info-block">
+        <div>
+            <img src="./img/lake.png" style="width: 90%; padding: 10px;" alt="Lake landscape">
+            <div style="width: 100%; font-weight: 400;
+                    font-size: 27.65px;
+                    line-height: 120%;  
+                    text-transform: capitalize;
+                    color: #3D3E48;">
+                memorable festivals on bali beach
+            </div>
+            <div style="padding: 10px; width: 100%; font-weight: 400; font-size: 16px; line-height: 180%; color: #3D3E48;">
+                <svg width="18" height="22" viewBox="0 0 18 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M9.00001 0.5C6.81276 0.50258 4.71584 1.3726 3.16923 2.91922C1.62261 4.46584 0.752589 6.56276 0.750009 8.75C0.747389 10.5374 1.33124 12.2763 2.41201 13.7C2.41201 13.7 2.63701 13.9963 2.67376 14.039L9.00001 21.5L15.3293 14.0353C15.3623 13.9955 15.588 13.7 15.588 13.7L15.5888 13.6978C16.669 12.2747 17.2526 10.5366 17.25 8.75C17.2474 6.56276 16.3774 4.46584 14.8308 2.91922C13.2842 1.3726 11.1873 0.50258 9.00001 0.5ZM9.00001 11.75C8.40666 11.75 7.82665 11.5741 7.3333 11.2444C6.83995 10.9148 6.45543 10.4462 6.22837 9.89805C6.00131 9.34987 5.9419 8.74667 6.05765 8.16473C6.17341 7.58279 6.45913 7.04824 6.87869 6.62868C7.29825 6.20912 7.83279 5.9234 8.41474 5.80764C8.99668 5.69189 9.59988 5.7513 10.1481 5.97836C10.6962 6.20542 11.1648 6.58994 11.4944 7.08329C11.8241 7.57664 12 8.15666 12 8.75C11.999 9.54535 11.6826 10.3078 11.1202 10.8702C10.5578 11.4326 9.79535 11.749 9.00001 11.75Z"
+                        fill="#295943" />
+                </svg>
+                Bali, Indonesia
+            </div>
+            <div style="padding: 10px; width: 100%; font-weight: 400; font-size: 16px; line-height: 180%;">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet integer facilisis aliquet erat vitae viverra ornare.
+            Placerat urna integer nibh justo. Dictum vulputate odio mauris amet, dictumst molestie. Faucibus consectetur mauris
+            tristique dolor ut diam, adipiscing et. Semper mi proin malesuada orci phasellus. Consectetur posuere iaculis amet sem.
+            Euismod turpis pellentesque sit risus eu, sagittis nulla. Facilisis urna, mi pharetra sed.</div>
+            <div style="padding: 10px; width: 100%; font-weight: 400; font-size: 16px; line-height: 180%;">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet integer facilisis aliquet erat vitae viverra ornare.
+            Placerat urna integer nibh justo. Dictum vulputate odio mauris amet, dictumst molestie.</div>
+            <div>
+                <img style="margin: 10px; width: 45%;" src="./img/discover-waterfall.png" alt="waterfall"><img style="margin: 10px; width: 45%" src="./img/discover-hill.png" alt="hill">
+            </div>
+            <div style="padding: 10px; width: 100%; font-weight: 400; font-size: 16px; line-height: 180%;">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet integer facilisis aliquet erat vitae viverra ornare.
+            Placerat urna integer nibh justo. Dictum vulputate odio mauris amet, dictumst molestie. Faucibus consectetur mauris
+            tristique dolor ut diam, adipiscing et. Semper mi proin malesuada orci phasellus. Consectetur posuere iaculis amet sem.
+            Euismod turpis pellentesque sit risus eu, sagittis nulla. Facilisis urna, mi pharetra sed.
+            </div>
+        </div>
+        <div>
+            <div style="width: 100%;">
+                <div style="float: left;">Other Destinations</div>
+                <div style="float: right; color: #43B97F;">See all</div>
+            </div>
+            <div style="height: 20px;"></div>
+            <div style="color: #fff; background: url(./img/card-lake.png) no-repeat; height: 200px; width: 90%; border-radius: 5px; margin: 10px;">
+                <div style="font-weight: bold; padding: 15px;">Wakatobi beach is a paradise for coral reets in indonesia</div>
+                <div style="padding: 15px; font-size: 12px;">Yogyakarta, Indonesia</div>
+                <div style="cursor: pointer; text-align: center; margin: 10px; width: 100px; padding: 5px; border-radius: 5px; background-color: #43B97F; font-weight: 600; font-size: 14px; line-height: 180%;">View More</div>
+            </div>
+            <div style="color: #fff; background: url(./img/card-lake.png) no-repeat; height: 200px; width: 90%; border-radius: 5px; margin: 10px;">
+            <div style="font-weight: bold; padding: 15px;">Wakatobi beach is a paradise for coral reets in indonesia</div>
+            <div style="padding: 15px; font-size: 12px;">Yogyakarta, Indonesia</div>
+            <div
+                style="cursor: pointer; text-align: center; margin: 10px; width: 100px; padding: 5px; border-radius: 5px; background-color: #43B97F; font-weight: 600; font-size: 14px; line-height: 180%;">
+                View More</div>
+            </div>
+            <div style="color: #fff; background: url(./img/card-lake.png) no-repeat; height: 200px; width: 90%; border-radius: 5px; margin: 10px;">
+            <div style="font-weight: bold; padding: 15px;">Wakatobi beach is a paradise for coral reets in indonesia</div>
+            <div style="padding: 15px; font-size: 12px;">Yogyakarta, Indonesia</div>
+            <div
+                style="cursor: pointer; text-align: center; margin: 10px; width: 100px; padding: 5px; border-radius: 5px; background-color: #43B97F; font-weight: 600; font-size: 14px; line-height: 180%;">
+                View More</div>
+            </div>
+            <div style="color: #fff; background: url(./img/card-lake.png) no-repeat; height: 200px; width: 90%; border-radius: 5px; margin: 10px;">
+            <div style="font-weight: bold; padding: 15px;">Wakatobi beach is a paradise for coral reets in indonesia</div>
+            <div style="padding: 15px; font-size: 12px;">Yogyakarta, Indonesia</div>
+            <div
+                style="cursor: pointer; text-align: center; margin: 10px; width: 100px; padding: 5px; border-radius: 5px; background-color: #43B97F; font-weight: 600; font-size: 14px; line-height: 180%;">
+                View More</div>
+            </div>
+        </div>
+    </div>
     @include('partials/footer.html')
 </body>
 
